Flag-free Loom access: two-strategy trusted lookup (opened module, Unsafe)
LookupUnsafe provides a trusted MethodHandles.Lookup with two strategies in
order: (1) the opened-module path - privateLookupIn succeeds when the JVM
was started with --add-opens=java.base/java.lang=ALL-UNNAMED; per-target
lookups are re-minted with privateLookupIn because Lookup.in() drops
PRIVATE access across classes - and (2) the sun.misc.Unsafe fallback that
grabs IMPL_LOOKUP through staticFieldBase/staticFieldOffset (not the Class
object as a base, which only works by HotSpot coincidence) and needs no
JVM flags at all, at the price of riding deprecated-for-removal APIs.
Initialization is fail-safe: both failures are retained and chained, never
an ExceptionInInitializerError.

PrivateLoomSupport and SharedFtlSupport now reach every private member
through LookupUnsafe.lookupIn as VarHandles/MethodHandles - no
setAccessible on java.base anywhere, so --add-opens becomes an optional
hardening flag instead of a requirement. Verified by the full suite both
with and without the flag. VirtualThreadTaskProxy.kt scaffolds the bridge
to the JDK 26+ Thread.VirtualThreadScheduler API (dormant on 25,
status-reported), the eventual replacement for this whole layer.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>