@@ -22,7 +22,7 @@ class WalkBenchTest {
 
     @Test
     fun measureDisguiseTiers() {
-        check(PrivateLoomSupport.isSupported) { "run with --add-opens=java.base/java.lang=ALL-UNNAMED" }
+        check(PrivateLoomSupport.isSupported) { "Loom internals unavailable (opened-module and Unsafe strategies both failed)" }
         val group = VirtualIoEventLoopGroup(nThreads = 1)
         try {
             val loop = group.next() as VirtualIoEventLoop
